# raz

./: README.md  setup.sh
ai-hat-test/: .gitignore  README.md  pyproject.toml  run-ai-hat-test.sh  run-camera-test.sh  run-model-smoke.sh
ai-hat-test/src/ai_hat_test/: __init__.py  camera_test.py  main.py
ai-hat-test/tests/: test_smoke.py
test-project/: .gitignore  README.md  pyproject.toml  run-test-project.sh
test-project/src/test_project/: __init__.py  main.py
test-project/tests/: test_smoke.py
