[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hat-test"
version = "0.1.0"
description = "Smoke tests for Raspberry Pi AI M.2 HAT setup"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = []

[project.scripts]
ai-hat-test = "ai_hat_test.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
